--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
 # Site settings
-title: I2DL: Introduction to Deep Learning
+title: I2DL - Introduction to Deep Learning
 email: zenilton@pucminas.br
 description: "Course materials and notes for I2DL: Introduction to Deep Learning (based on Stanford CS231n and Berkeley CS 294/129)."
 baseurl: ""
