--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: I2DL Introduction to Deep Learning
+title: I2DL - Introduction to Deep Learning
 email: zenilton@pucminas.br
 description: "Course materials and notes for PUC Minas class I2DL: Introduction to Deep Learning."
 baseurl: "http://zenilton-patrocinio.github.io/i2dl"
